# streamstat

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.toml
cmake/: CompilerWarnings.cmake  ProjectOptions.cmake  Sanitizers.cmake  bootstrap.cmake  compiler_warnings.cmake  project_options.cmake
src/app/: main.cpp
src/lib/streamstat/cli/: cli.cpp  cli.hpp
src/lib/streamstat/logging/: logging.cpp  logging.hpp
